--- a/src/Components/CharacterImages.css
+++ b/src/Components/CharacterImages.css
@@ -1,6 +1,8 @@
 .container {
     display: flex;
-    flex-grow: 4; 
-    
-
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.card{
+    padding: 20px;
 }
