Styled CharacterDetails and CharacterSearch css

--- a/src/Components/CharacterDetails.css
+++ b/src/Components/CharacterDetails.css
@@ -1,8 +1,36 @@
+/* body{
+    height: 100px;
+       background: url("https://wallpapercave.com/wp/wp6105436.jpg");
+       
+   } */
+
 .detailsContainer {
     text-align: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+   
 }
 
-.image1 {
+.image1{
  border: #31C1E7 thick solid;
  border-radius: 300px;
+ margin: 10px;
+  
+}
+.detailsParagraph{
+    font-family: Creepster;
+    font-size: 25px;
+}
+.characterFooter{
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-around;
+    padding: 10px;
+
+}
+.seePrevs{
+    padding: 20px;
+}
+.seeNext{
+    padding: 20px;
 }
