--- a/src/Components/CharacterNavbar.css
+++ b/src/Components/CharacterNavbar.css
@@ -10,7 +10,8 @@
     display: flex;
     flex-direction: row-reverse;
     justify-content: flex-end;
-    background-color:	purple;
+    background-color: #7F00FF;
+    opacity: 0.5;
     height: 150px;
 
     
@@ -24,7 +25,3 @@
     margin-bottom: -5px;
    }
    
-   body{
-    height: 100px;
-       background-color: green;
-   }
