--- a/src/Components/CharacterSearch.css
+++ b/src/Components/CharacterSearch.css
@@ -33,7 +33,7 @@ body{
 .image2{
     border-radius: 15%;
     border:white solid;
-    margin: 10px;
+    margin: 0px 25px 0px 0px;
 }
 
 .image2:hover {
